--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,18 @@
 [tool.poetry]
 name = "pypoetry"
 version = "1.0"
-description = "poetry file"
+description = "poerty file"
 authors = ["angelica <angelica.ferlin@gmail.com>"]
 license = "Unlicense"
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+jupyter = "^1.0.0"
+pandas = "^1.5.0"
 
+
+[tool.poetry.group.dev.dependencies]
 
 [build-system]
 requires = ["poetry-core"]
